--- a/index.html
+++ b/index.html
@@ -534,7 +534,13 @@
             <a href="https://coursera.org/verify/specialization/RQXT4T2NU5C2" target="_blank" class="btn btn-primary btn-md">Certificate</a>
         </div>
     </div>
-    
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Google Data Analytics</h5>
+            <p class="card-text">Offered by: Google on Coursera.</p>
+            <a href="https://coursera.org/verify/professional-cert/PKD5EQRB9G6X" target="_blank" class="btn btn-primary btn-md">Certificate</a>
+        </div>
+    </div>
     <!-- Course Card 2 -->
     <div class="card">
         <div class="card-body">
